--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     ],
     "require": {
         "php": "^7.1",
-        "symfony/process": "^4.4"
+        "symfony/process": "^4.4|^5.0"
     },
     "require-dev": {
         "appwhole/drill-framework": "^4.6|^5.0",
